@@ -51,22 +51,5 @@
 <!--  </script> -->
 
     
-
-<!--   <footer> -->
-<!--     <p> -->
-<!--       Created by -->
-<!--       <a target="_blank" href="http://www.irisa.fr/LIS/Members/ferre/">Sébastien Ferré</a> and Pierre Maillot © 2016 -->
-<!--       <a target="_blank" href="http://www.irisa.fr/LIS/"><img src="http://www.irisa.fr/LIS/ferre/sewelis/lis.png" alt="LIS team" height="40"></a> -->
-<!--       <a target="_blank" href="http://www.irisa.fr/"><img src="http://www.irisa.fr/LIS/ferre/sewelis/irisa.jpg" alt="IRISA" height="40"></a> -->
-<!--       <a target="_blank" href="http://www.univ-rennes1.fr/"><img src="http://www.irisa.fr/LIS/ferre/sewelis/UR1.png" alt="Université Rennes 1" height="40"></a> -->
-<!--     </p> -->
-<!--     <p> -->
-<!--       Visit -->
-<!--       <a target="_blank" href="http://www.irisa.fr/LIS/ferre/"> -->
-<!-- 	Sébastien Ferré's homepage -->
-<!--       </a> -->
-<!--       for more information. -->
-<!--     </p> -->
-<!--   </footer> -->
   </body>
 </html>
