@@ -6,9 +6,13 @@
 - Etapes de listing présentes dans l'historique de la page
 - Ajouts/suppressions de lignes présentes dans l'historique de la page
 
+17/11/2016
+- Changement du système des suggestions, utilisation normale de GetCompletions sans "More general"
+
 TODO:
 - Suppression des étapes intermédiaires (une seul type) de l'historique (+++)
 - Remise à zéro de l'indice d'historique de la barre d'adresse lorsque nécessaire (ou trouver un moyen de rendre chaque session unique) (+++)
 - Changement rechargement des completions; Cas-test: Film "I, origins" avec la meme personne directeur, scenariste et producteur, absent de la base (+++)
 - Lien entre answers et formulaire (++)
+- Mise en évidence du filtrage des suggestions (++)
 - Ajout de bulles d'aide pour explication de l'utilité des boutons (+)
